--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="main-container">
       <div class="working-space space-between">
         <div class="canvas-container">
-          <canvas id="my-canvas" height="500" width="500"></canvas>
+          <canvas id="my-canvas" height="500" width="500" onclick="pressCanvas(event)"></canvas>
         </div>
         <div class="controller-content">
 
