--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <div class="main-container">
       <div class="working-space space-between">
         <div class="canvas-container">
-          <canvas id="my-canvas" height="400" width="400" onclick="pressCanvas(event)"></canvas>
+          <canvas id="my-canvas" height="400" width="400" onclick="pressCanvas(event)"
+            onmouseup="keepPosition(event)"></canvas>
         </div>
         <div class="controller-content flex space-between">
 
@@ -40,7 +41,7 @@
             <button onclick="onChangeLines()"><img src="icons/up-and-down-opposite-double-arrows-side-by-side.png"
                 alt="" /></button>
             <button onclick="addLine()"><img src="icons/add.png" alt="" /></button>
-            <button><img src="icons/trash.png" alt="" /></button>
+            <button onclick="onRemoveLine()"><img src="icons/trash.png" alt="" /></button>
           </div>
 
           <div class="change-apperance-buttons grid">
