--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="main-container">
       <div class="working-space space-between">
         <div class="canvas-container">
-          <canvas id="my-canvas" height="400" width="370" onmousedown="pressLine(event)" ontouchmove="pressLine(event)"
+          <canvas id="my-canvas" height="400" width="330" onmousedown="pressLine(event)" ontouchmove="pressLine(event)"
             ontouchend="keepPosition(event)" onmouseup="keepPosition(event)"></canvas>
         </div>
         <div class="controller-content flex space-around">
@@ -76,9 +76,6 @@
                     src="icons/download.png" alt="" />Download</a></button>
               <div class="share-container"></div>
             </form>
-
-
-
           </div>
         </div>
       </div>
@@ -93,8 +90,9 @@
             <option value="sad">
             <option value="happy">
             <option value="funny">
-            <option value="angry">
+            <option value="awesome">
             <option value="smart">
+            <option value="men">
           </datalist>
           <div class="key-words">
             <ul class="ul-words clean-list flex space-between">
@@ -111,7 +109,6 @@
           </div>
         </div>
       </nav>
-
     </div>
     </div>
   </main>
