--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
               <div class="share-container"></div>
             </form>
             <div class="flex">
-              <button><img src="icons/download.png" alt="" />Download</button>
-              <a href="#" onclick="downloadImg(this)" download="my-img.jpg"></a>
-
+              <button>
+                <a href="#" onclick="downloadImg(this)" download="my-img.jpg"><img src="icons/download.png"
+                    alt="" />Download</a>
+              </button>
             </div>
           </div>
         </div>
